argocd/k8s-but-use-make/externalservice.yaml
# expose argocd-server service for using it with an ingress
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-external
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"http":"argocd-backend-config"}}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
